# agent-brain-bootstrap

./: .env.example  .gitignore  PRODUCTION_PLAN.md  README.md  RELEASE_NOTES.md  docker-compose.rdp.yml  docker-compose.yml  list_devices.py  mobile_server.py  pyproject.toml  setup.py  test_audio.py  test_recording.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release-windows.yml
agent/: agent_main.py  controller_bridge.py  decision_engine.py  requirements.txt  server.py
agent/config/: macros.json  settings.py
agent/memory/: wp_client.py
agent/speech/: test_speech.py  voice_loop.py
agent/utils/: logger.py
agent_brain.egg-info/: PKG-INFO  SOURCES.txt
docs/: ACCESSIBILITY.md  ios-setup.md  macros-sample.json  voice-commands.md
installers/windows/: agent-brain.iss
public/: controller.html  manifest.webmanifest  status.html
public/mobile/: index.html
scripts/: agent-brain-bootstrap.code-workspace  bootstrap.ps1  cleanup.ps1  create_github_release.ps1  install_gh.ps1  quick_voice_test.ps1  rdp_profile_generator.py  rdp_reconnect.ps1  sanity_agent.ps1  show_status.ps1  start_agent.ps1  stop_agent.ps1  store_secret.ps1  voice_sanity_check.ps1
tests/: test_api_security.py
wp/: acf-export.json
